--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       <form action="https://encurtador.com.br/rNRS7" class="login-form">
 
-        <img class="img_form" src="https://pbs.twimg.com/profile_images/1024112175378575360/y47CjJy4_400x400.jpg" alt="">
+        <img class="img_form" src="avatar.png" alt="">
         <h1>Yunna</h1>
         <button type="submit" class="logbtn">Invite</button>
       </form>
