--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             but give it a try and dats what happened
         </p>
         <img src="./assets/yunna_avatar.png" id="avatar">
-        <a href="https://encurtador.com.br/rNRS7">
+        <a href="https://discordapp.com/oauth2/authorize?client_id=635227108335157268&scope=bot&permissions=8">
             <button type="button" class="invite_button" style="font-size: 17px;"><img src="./assets/discord_logo.svg" style="margin-right: 15px;">Invite Yunna</button>
         </a>
     </main>
