--- a/index.html
+++ b/index.html
@@ -2,21 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="imagem/png" href="./assets/yunna_avatar.png" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900" rel="stylesheet">
     <title>Yunna Bot | Home</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <main>
-        <h1>Yunna Bot</h1>
-        <p> 
-            Just a guy bored w/ the web design class n' hated python 
-            but give it a try and dats what happened
-        </p>
-        <img src="./assets/yunna_avatar.png" id="avatar">
-        <a href="https://discordapp.com/oauth2/authorize?client_id=635227108335157268&scope=bot&permissions=8">
-            <button type="button" class="invite_button" style="font-size: 17px;"><img src="./assets/discord_logo.svg" style="margin-right: 15px;">Invite Yunna</button>
-        </a>
+        <div id="menu">
+            
+        </div>
+        <div id="container">
+            <h1 class="title">Yunna Bot</h1>
+            <p class="description"> 
+                Just a guy bored with the web design class and hated python<br> 
+                but give it a try and that's what happened.
+            </p>
+            <img src="./assets/yunna_avatar.png" id="avatar">
+            <a href="https://discordapp.com/oauth2/authorize?client_id=635227108335157268&scope=bot&permissions=8">
+                <button type="button" class="invite_button" style="font-size: 17px;"><img src="./assets/discord_logo.svg" style="margin-right: 15px;">Invite Yunna</button>
+            </a>
+        </div>
     </main>
 </body>
 </html>
