--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <a href="https://discordapp.com/oauth2/authorize?client_id=635227108335157268&scope=bot&permissions=8">
                 <button type="button" class="invite_button" style="font-size: 17px;"><img src="./assets/discord_logo.svg" style="margin-right: 15px;">Invite Yunna</button>
             </a>
+            <a href="#">
+                <button type="button" class="commands_button" style="font-size: 17px;"><img src="./assets/gear_icon.svg" style="margin-right: 15px;">Commands</button>
+            </a>
         </div>
     </main>
 </body>
