--- a/index.html
+++ b/index.html
@@ -22,10 +22,26 @@
             <a href="https://discordapp.com/oauth2/authorize?client_id=635227108335157268&scope=bot&permissions=8">
                 <button type="button" class="invite_button" style="font-size: 17px;"><img src="./assets/discord_logo.svg" style="margin-right: 15px;">Invite Yunna</button>
             </a>
-            <a href="#">
+            <a href="#commands" class="smooth-scrolling">
                 <button type="button" class="commands_button" style="font-size: 17px;"><img src="./assets/gear_icon.svg" style="margin-right: 15px;">Commands</button>
             </a>
         </div>
+        <div id="commands">
+            <h1 class="title">Commands</h1>
+            <a href="#container" class="smooth-scrolling">
+                    <button type="button" class="home_button" style="font-size: 17px;">Home</button>
+            </a>  
+        </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+        <script>
+            var $doc = $('html, body');
+            $('.smooth-scrolling').click(function() {
+                $doc.animate({
+                    scrollTop: $( $.attr(this, 'href') ).offset().top
+                }, 500);
+                return false;
+            });
+        </script>
     </main>
 </body>
 </html>
