--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </a>
         </div>
         <div id="commands">
-            <h1 class="title">Commands</h1>
+            <h1 class="title2">Commands</h1>
             <a href="#container" class="smooth-scrolling">
                     <button type="button" class="home_button" style="font-size: 17px;">Home</button>
             </a>  
