--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
             <a href="#container" class="smooth-scrolling">
                     <button type="button" class="home_button" style="font-size: 17px;">Home</button>
             </a>  
+            <div class="c-avatar c-text">
+                <h2>!avatar &ltmention&gt</h2>
+                <p>Get a user's avatar</p>
+            </div>
+            <div class="c-info c-text">
+                <h2>!info</h2>
+                <p>Display Yunna's description</p>
+            </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
         <script>
