--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/commands.css">
     <link rel="stylesheet" href="./css/backTop.css">
+    <script src="/js/ads.js?"></script>
 </head>
 <body>
     <main>
@@ -74,6 +75,12 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
         <script src="js/smoothScrolling.js"></script>
         <script src="./js/backTop.js"></script>
+        <script src="/js/ads.js?"></script>
+        <script>
+            if(typeof adBlockOn == "undefined") {
+                alert("Desliga o AdBlock Bizonho");
+            }
+        </script>
     </main>
 </body>
 </html>
